@@ -174,6 +174,7 @@ EC_TAG_STATS_UL_SPEED                     0x0200
 	EC_TAG_STATS_KAD_USERS                    0x020A
 	EC_TAG_STATS_ED2K_FILES                   0x020B
 	EC_TAG_STATS_KAD_FILES                    0x020C
+	EC_TAG_STATS_LOGGER_MESSAGE               0x020D
 
 EC_TAG_PARTFILE                           0x0300
 	EC_TAG_PARTFILE_NAME                      0x0301
